--- a/OOP/nbproject/project.properties
+++ b/OOP/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.apache-httpcomponents-httpclient-cache.jar=apache-httpcomponents-httpclient-cache.jar
 file.reference.json-20180813.jar=json-20180813.jar
+file.reference.mysql-connector-java-8.0.12.jar=mysql-connector-java-8.0.12.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -38,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.json-20180813.jar}:\
-    ${file.reference.apache-httpcomponents-httpclient-cache.jar}
+    ${file.reference.apache-httpcomponents-httpclient-cache.jar}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
